2013-12-11  Dario Rodriguez <dario@artica.es>

	* include/functions_update_manager.php: Fixed a problem
	unpacking open updates.

2013-12-09  Vanessa Gil <vanessa.gil@artica.es>

	* operation/invoices/invoices.php: Fixed bug
	listing cancelled invoices.

2013-12-05  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_crm.php
	  operation/companies/company_detail.php: Fixed bug
	listing company's contracts.

2013-12-05  Sancho Lerena <slerena@artica.es>

	* integria.spec: Fixed SUSE spec, was broken.

2013-12-02  Dario Rodriguez <dario@artica.es>

	* DEBIAN/control: Added php5-curl dependence.
	
2013-12-02  Dario Rodriguez <dario@artica.es>

	* install.php: Updated build.
 	* extras/build_src.sh: Fixed a problem creating zip file.

2013-12-02  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/zh_CN.mo: Updated translations.

2013-12-02  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/bn.mo
	  include/languages/bn.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/da.mo
	  include/languages/da.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/ar.mo
	  include/languages/fe.po
	  include/languages/fe.mo
	  include/languages/gl.po
	  include/languages/gl.mo
	  include/languages/he.po
	  include/languages/he.mo
	  include/languages/hi.po
	  include/languages/hi.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/ko.po
	  include/languages/ko.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pt.po
	  include/languages/pt.mo
	  include/languages/pt_BR.po
	  include/languages/pt_BR.mo
	  include/languages/sk.po
	  include/languages/sk.mo
	  include/languages/sl.po
	  include/languages/sl.mo
	  include/languages/sv.po
	  include/languages/sv.mo
	  include/languages/tr.po
	  include/languages/tr.mo