@@ -1,3 +1,8 @@
+2013-12-11  Dario Rodriguez <dairo@artica.es>
+
+	* integria_demo.sql: Added tlead_progress data to 
+	demo database schema.
+
 2013-12-11  Dario Rodriguez <dario@artica.es>
 
 	* include/functions_update_manager.php: Fixed a problem
